[package]
name = "tuna"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
tokio = { version = "1.40.0", features = ["full"] }
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
rand = "0.8.5"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
    "json",
    "any",


] }
chrono = { version = "0.4.38", features = ["serde"] } # "0.4.38"
futures = "0.3.30"
moka = { version = "0.12", features = ["future"] }
axum = "0.7.5"
time = { version = "0.3.4", features = ["serde"] }

mysql_async = { version = "0.34.2", features = ["binlog"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
uuid = { version = "1.8.0", features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
byteorder = "1.4.3"
mysql_common = "0.32.4"
redis = { version = "0.26.1", features = ["cluster-async", "tokio-comp"] }
sqlparser = "0.50.0"
rs-snowflake = "0.6.0"
local-ip-address = "0.6.2"
clickhouse = "0.11.6"
base64 = "0.22.1"
