[package]
name = "tuna"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
axum = "0.7.5"
byteorder = "1.4.3"
base64 = "0.22.1"
clap = { version = "4.5.16", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] } # "0.4.38"
clickhouse = { version = "0.11.6", features = ["time"] }
config = "0.14"
dotenv = "0.15"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.20"
local-ip-address = "0.6.2"
moka = { version = "0.12", features = ["future"] }
mysql_async = { version = "0.34.2", features = ["binlog"] }
mysql_common = "0.32.4"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.5"
redis = { version = "0.27.2", features = ["cluster-async", "tokio-comp"] }
rs-snowflake = "0.6.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "chrono",
    "json",
    "any",
] }
sqlparser = "0.50.0"
serde_repr = "0.1.19"
serde_yaml = "0.9"
tokio = { version = "1.40.0", features = ["full"] }
time = { version = "0.3.4", features = [
    "serde",
    "local-offset",
    "serde-human-readable",
    "macros",
] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
